# CPP-Stream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: continuation.h  filter.h  filters_lib.h  is_filters_factory_for.h  operations.h  stream.h  stream_traits.h  stream_visitors.h  streamv2.h  traits.h  value_holder.h  visitor.h
include/detail/: continuation_impl.h  filter_impl.h  is_filters_factory_for_impl.h  lazy_invoker.h  stream.h  stream_base.h  stream_filter.h  stream_filter_impl.h  stream_impl.h  stream_traits.h  stream_traits_impl.h  stream_visitors.h  streamv2.h  traits.h  traits_impl.h  utility.h  visitor.h
include/stream/: continuation.h  operations.h  stream.h
include/stream/detail/: continuation_impl.h  stream_impl.h
tests/: CMakeLists.txt  empty.cpp  filters_generic_int_stream.cpp  filters_generic_move_only_stream.cpp  filters_generic_noisy_stream.cpp  filters_int_finite_stream.cpp  filters_int_infinite_stream.cpp  filters_move_only_finite_stream.cpp  filters_move_only_infinite_stream.cpp  filters_noisy_finite_stream.cpp  int_stream.cpp  noisy.cpp  noisy.h  stream.cpp  stream_deduction_guides.cpp
